feat: Complete PvP AI Trading System - 4 Elite Agents, Public Dashboard, Aster DEX Integration
🤖 PvP AI ENSEMBLE (4 Elite Agents):
- DeepSeek PvP Momentum: 15x leverage, ultra-short scalps (cd /Users/aribs/AIAster && git commit -m "feat: Complete PvP AI Trading System - 4 Elite Agents, Public Dashboard, Aster DEX Integration

🤖 PvP AI ENSEMBLE (4 Elite Agents):
- DeepSeek PvP Momentum: 15x leverage, ultra-short scalps ($1K capital)
- FinGPT PvP Alpha: 12x leverage, catalyst arbitrage ($1K capital)
- Lag-Llama PvP Degen: 50x leverage, chaos exploitation ($1K capital)
- Profit Maximizer PvP: 20x leverage, ASTER stacking ($1K capital)

🎯 SYSTEM CONFIGURATION:
- Total Capital: $4K across 4 agents ($360 daily target)
- Risk Management: 25% drawdown limit, 15% per-trade risk
- Decision Frequency: 10-second intervals (6x faster)
- Symbol Universe: 155+ Aster DEX perpetual contracts

🔓 PUBLIC DASHBOARD:
- Removed login gates for public access
- Aster DEX branding throughout UI (navbar, dashboard, footer)
- Real-time agent performance and portfolio tracking
- Firebase hosting at sapphiretrade.xyz (custom domain ready)

🏗️ INFRASTRUCTURE OPTIMIZATION:
- Telegram service fix: Proper initialization handling
- Agent deployments: Cleaned up to 1 main pod (4 traders)
- Project migration: Complete switch to sapphireinfinite
- Training configs: Removed hardcoded symbols for full market coverage

📊 TECHNICAL IMPROVEMENTS:
- Enhanced error handling and logging
- Improved risk controls and position sizing
- Optimized API endpoints with proper authentication
- Added comprehensive monitoring scripts

🎮 PvP STRATEGIES IMPLEMENTED:
- Market manipulation combat tactics
- Weak hand exploitation algorithms
- Catalyst arbitrage timing systems
- Volatility harvesting during chaos events
- ASTER airdrop point maximization

🚀 DEPLOYMENT READY:
- Cloud Build configurations updated
- Kubernetes manifests optimized
- SSL certificate provisioning active
- Load balancer configured for Aster DEX

This 

--- a/infra/training/cloudbuild-fingpt.yaml
+++ b/infra/training/cloudbuild-fingpt.yaml
@@ -3,8 +3,8 @@ substitutions:
   _BASE_IMAGE: pytorch/pytorch:2.2.2-cuda12.1-cudnn8-runtime
   _REGION: us-central1
   _DISPLAY_NAME: fingpt-alpha-train
-  _DATA_PATH: gs://quant-ai-trader-credits/training/fingpt.jsonl
-  _SYMBOLS: BTCUSDT,ETHUSDT
+  _DATA_PATH: gs://sapphireinfinite/training/fingpt.jsonl
+  _SYMBOLS: ""  # Train on all available symbols
 
 steps:
   - name: 'gcr.io/cloud-builders/docker'
@@ -35,7 +35,7 @@ steps:
       - 'create'
       - "--region=${_REGION}"
       - "--display-name=${_DISPLAY_NAME}-$BUILD_ID"
-      - "--worker-pool-spec=machine-type=a2-highgpu-1g,replica-count=1,container-image=us-central1-docker.pkg.dev/$PROJECT_ID/vertex-ai-training/${_TRAIN_IMAGE}:$BUILD_ID,command=python,args=-m,args=cloud_trader.training.fingpt_train,args=--data-path,args=${_DATA_PATH},args=--symbols,args=${_SYMBOLS},args=--output-dir,args=/gcs/artifacts/fingpt"
+      - "--worker-pool-spec=machine-type=a2-highgpu-1g,replica-count=1,container-image=us-central1-docker.pkg.dev/$PROJECT_ID/vertex-ai-training/${_TRAIN_IMAGE}:$BUILD_ID,command=python,args=-m,args=cloud_trader.training.fingpt_train,args=--data-path,args=${_DATA_PATH},args=--output-dir,args=/gcs/artifacts/fingpt"
 
 options:
   logging: CLOUD_LOGGING_ONLY
